--- a/app/src/main/res/layout/activity_courses.xml
+++ b/app/src/main/res/layout/activity_courses.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".coursesActivity">
+    tools:context="ui.coursesActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCourses"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:layout_width="396dp"
+        android:layout_height="568dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
