--- a/app/src/main/res/layout/course_list_item.xml
+++ b/app/src/main/res/layout/course_list_item.xml
@@ -17,25 +17,27 @@
         android:layout_marginBottom="8dp">
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tvCourseName"
             android:layout_width="181dp"
             android:layout_height="28dp"
+            android:layout_marginStart="12dp"
             android:layout_marginTop="52dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.299"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Mobile Development" />
+            tools:text="Course name" />
 
         <TextView
             android:id="@+id/tvDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
             android:layout_marginTop="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.398"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:layout_constraintTop_toBottomOf="@+id/tvCourseName"
             tools:text="intoduction to mobile development" />
 
         <TextView
@@ -57,5 +59,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/tvCourseCode"
             tools:text="instructor name" />
+
+        <ImageView
+            android:id="@+id/ivCourses"
+            android:layout_width="18dp"
+            android:layout_height="17dp"
+            app:layout_constraintBottom_toBottomOf="@+id/tvCourseName"
+            app:layout_constraintEnd_toStartOf="@+id/tvCourseName"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tvCourseName"
+            app:srcCompat="@drawable/ic_baseline_text_snippet_24" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
